# forvard-platform

./: docker-compose.yml  setup-portainer.MD  setup_env.sh
api/: Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt  run_tests.sh  setup.cfg  setup_env.sh  test_forex_production.py
api/app/: main.py
api/app/admin/: __init__.py  auth.py  panel.py
api/app/core/: database.py  dependencies.py  exceptions.py  logging.py  security.py
api/app/models/: financial_data.py  token.py  user.py
api/app/routers/: admin.py  auth.py  financial_data.py
api/app/sample_data/: lista_asset_rv.xlsx  rv_data.csv  rv_data.ods
api/app/src/: init_ods_data.py  init_rv_data.py  init_users.py
api/logs/: api.json
api/tests/: PERMISSION_TEST_REPORT.md  __init__.py  conftest.py  test_admin_restrictions.py  test_role_permissions.py
api/tests/fixtures/: create_test_db.sql  insert_test_data.sql  sample_data.sql
api/tests/integration/: __init__.py  test_api_flow.py
api/tests/unit/: __init__.py  test_app.py  test_auth.py  test_financial_data.py
api/tmp/downloads/: financial_data_20250518_235539.csv  financial_data_20250529_154231.csv  financial_data_20_symbols_20250721_165450.csv  financial_data_forex_EURUSD_20250903_010329.csv  financial_data_stock_20250518_235543.csv  financial_data_stock_AAPL_20250518_235539.csv  financial_data_stocks_CL_20250903_010352.csv
frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
frontend_2/: .dockerignore  DEPLOY.md  Dockerfile  Dockerfile.dev  Dockerfile.letsencrypt  deploy.sh  docker-compose.letsencrypt.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  nginx-dev.conf  nginx-letsencrypt-ready.conf  nginx-letsencrypt.conf  nginx-proxy-stack.yml  nginx.conf  package-lock.json  package.json  setup-letsencrypt.sh  traefik-proxy-stack.yml
monitor/: docker-compose.yaml
postgres/: docker-compose.yaml
proxy/: docker-compose.yaml
python_scripts/: .env.example  compute_rcov.py  compute_rv.py  database_backup.py  download.py  export_covariance_data.py  main_pipeline.py  (+11 more)
(+77 files in other folders)
