[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["Niccolo Salvini <47143429+NiccoloSalvini@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.12"
sqlalchemy = "^2.0.41"
pydantic-extra-types = "^2.10.4"
uvicorn = "^0.34.2"
pydantic = {extras = ["email"], version = "^2.11.4"}
python-dotenv = "^1.1.0"
python-jose = "^3.4.0"
passlib = "^1.7.4"
python-multipart = "^0.0.20"
bcrypt = "^4.3.0"
pandas = "^2.2.3"
psycopg2-binary = "^2.9.10"
httpx = "^0.28.1"
fastapi-admin = "^1.0.4"
sqladmin = "^0.20.1"
jinja2 = "^3.1.6"
itsdangerous = "^2.2.0"
loguru = "^0.7.3"
jwt = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"
pytest-mock = "^3.12.0"
black = "^24.1.1"
isort = "^5.13.2"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow"
]
